# pinklib

./: .clang-format  meson.build
include/pink/: allocator.hpp  base.hpp  box.hpp  type_traits.hpp
src/: allocator.cpp  base.cpp
test/: allocator.cpp  meson.build
